<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_m"
        android:layout_marginEnd="@dimen/margin_m"
        android:layout_marginBottom="24dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_m"
        android:layout_marginBottom="@dimen/margin_l"
        android:ems="10"
        android:hint="@string/name_of_your_drink"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/img_drink"
        app:layout_constraintStart_toStartOf="@+id/img_drink"
        app:layout_constraintTop_toBottomOf="@+id/img_drink" />

    <ImageView
        android:id="@+id/img_drink"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginTop="@dimen/margin_m"
        android:layout_marginBottom="@dimen/margin_l"
        android:contentDescription="@string/drink_image"
        app:layout_constraintBottom_toTopOf="@+id/et_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Spinner
        android:id="@+id/sp_category"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="@dimen/margin_m"
        android:layout_marginEnd="@dimen/margin_m"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_category"
        app:layout_constraintBottom_toTopOf="@+id/sp_category"
        app:layout_constraintStart_toStartOf="@+id/sp_category"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_xs"
        android:layout_marginBottom="@dimen/margin_xs"
        android:clickable="true"
        android:contentDescription="@string/choose_image"
        app:layout_constraintBottom_toBottomOf="@+id/img_drink"
        app:layout_constraintEnd_toEndOf="@+id/img_drink"
        app:srcCompat="@drawable/ic_photo_camera_black_48dp" />

</androidx.constraintlayout.widget.ConstraintLayout>